--- a/docs/_data/sidebars/guides_sidebar.yml
+++ b/docs/_data/sidebars/guides_sidebar.yml
@@ -31,9 +31,65 @@ entries:
       url: /guides_api_statuses.html
       output: web, pdf
 
-  - title: Examples to Integrate
+  - title: IAM Domain
     output: web
     folderitems:
+
+    - title: API reference
+      url: /guides_postman.html
+      output: web
+
+    - title: Supported filters
+      url: /guides_postman.html
+      output: web
+
+    - title: Postman collection
+      url: /guides_postman.html
+      output: web
+
+  - title: Learning Domain
+    output: web
+    folderitems:
+
+    - title: API reference
+      url: /guides_postman.html
+      output: web
+
+    - title: Supported filters
+      url: /guides_postman.html
+      output: web
+
+    - title: Postman collection
+      url: /guides_postman.html
+      output: web
+
+  - title: Workforce Management Domain
+    output: web
+    folderitems:
+
+    - title: API reference
+      url: /guides_postman.html
+      output: web
+
+    - title: Supported filters
+      url: /guides_postman.html
+      output: web
+
+    - title: Postman collection
+      url: /guides_postman.html
+      output: web
+
+  - title: Extensions
+    output: web
+    folderitems:
+
+    - title: API reference
+      url: /guides_postman.html
+      output: web
+
+    - title: Supported filters
+      url: /guides_postman.html
+      output: web
 
     - title: Postman collection
       url: /guides_postman.html
