--- a/docs/_data/sidebars/guides_sidebar.yml
+++ b/docs/_data/sidebars/guides_sidebar.yml
@@ -68,15 +68,15 @@ entries:
     folderitems:
 
     - title: API reference
-      url: /guides_postman.html
+      url: /wfm_api_reference.html
       output: web
 
     - title: Supported filters
-      url: /guides_postman.html
+      url: /wfm_api_filters.html
       output: web
 
     - title: Postman collection
-      url: /guides_postman.html
+      url: /wfm_api_postman.html
       output: web
 
   - title: Extensions
