--- a/docs/_data/sidebars/guides_sidebar.yml
+++ b/docs/_data/sidebars/guides_sidebar.yml
@@ -75,6 +75,10 @@ entries:
     output: web
     folderitems:
 
+    - title: Introduction
+      url: /wfm_api_intro.html
+      output: web
+
     - title: API reference
       url: /wfm_api_reference.html
       output: web
