Fix release notes title and menu item

--- a/docs/_data/sidebars/guides_sidebar.yml
+++ b/docs/_data/sidebars/guides_sidebar.yml
@@ -111,7 +111,7 @@ entries:
     output: web
     folderitems:
 
-    - title: Release notes
+    - title: Changelog
       url: /guides_release_notes.html
       output: web
 
