--- a/docs/_data/sidebars/guides_sidebar.yml
+++ b/docs/_data/sidebars/guides_sidebar.yml
@@ -40,7 +40,7 @@ entries:
       output: web
 
     - title: API reference
-      url: /IAM/IAM.html
+      url: /IAM.html
       output: web
 
     - title: Supported filters
