Added contact us section

--- a/docs/_data/sidebars/guides_sidebar.yml
+++ b/docs/_data/sidebars/guides_sidebar.yml
@@ -102,3 +102,7 @@ entries:
   - title: Support
     output: web
     folderitems:
+
+    - title: Contact us
+      url: /guides_support.html
+      output: web
