Adding getting started section back to the menu

--- a/docs/_data/sidebars/guides_sidebar.yml
+++ b/docs/_data/sidebars/guides_sidebar.yml
@@ -15,6 +15,10 @@ entries:
       output: web, pdf
       type: homepage
 
+    - title: Getting started
+      url: /guides_getting_started.html
+      output: web, pdf
+
     - title: Request headers and responses
       url: /guides_request_headers_and_responses.html
       output: web, pdf
