--- a/docs/_data/sidebars/guides_sidebar.yml
+++ b/docs/_data/sidebars/guides_sidebar.yml
@@ -81,7 +81,7 @@ entries:
       output: web
 
 
-title: Medical Leave Management
+  - title: Medical Leave Management
     output: web
     folderitems:
 
