--- a/docs/_data/sidebars/guides_sidebar.yml
+++ b/docs/_data/sidebars/guides_sidebar.yml
@@ -72,7 +72,7 @@ entries:
       output: web
 
     - title: Swagger UI
-      url: /wfm_swagger.html
+      url: /wfm_api_reference.html
       output: web
 
    
