--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -24,7 +24,7 @@ description: The Dossier API allows for integration over HTTPS between Personnel
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: ""
-github_username:  PeterbanMiltenburg
+github_username:  PetervanMiltenburg
 
 # Build settings
 theme: minima
