--- a/docs/_data/sidebars/guides_sidebar.yml
+++ b/docs/_data/sidebars/guides_sidebar.yml
@@ -36,7 +36,7 @@ entries:
     folderitems:
 
     - title: Introduction
-      url: /iam_api_intro.html
+      url: /dossier_api_intro.html
       output: web
 
     - title: Swagger UI
