--- a/docs/_data/sidebars/guides_sidebar.yml
+++ b/docs/_data/sidebars/guides_sidebar.yml
@@ -2,7 +2,7 @@
 
 entries:
 - title: sidebar
-  product: Dossier API Documentation
+  product: Personnel File Connector API Documentation
   version: 1.0
   folders:
 
