--- a/docs/_data/sidebars/guides_sidebar.yml
+++ b/docs/_data/sidebars/guides_sidebar.yml
@@ -38,6 +38,19 @@ entries:
     - title: Introduction
       url: /personnel_file_connector_intro.html
       output: web
+      
+    - title: Endpoints
+      output: web
+      folderitems:
+
+          - title: Employees
+            url: /personnel_file_connector_endpoint_employees.html
+            output: web
+
+          - title: Documents
+            url: /personnel_file_connector_endpoint_documents.html
+            output: web
+      
 
     - title: Swagger UI
       url: /personnel_file_connector_reference.html
