--- a/docs/_data/sidebars/guides_sidebar.yml
+++ b/docs/_data/sidebars/guides_sidebar.yml
@@ -52,6 +52,10 @@ entries:
         output: web      
         subfolderitems:
 
+        - title:  Schema
+          url: /personnel_file_connector_endpoint_schema.html
+          output: web
+          
         - title:  Employees
           url: /personnel_file_connector_endpoint_employees.html
           output: web
