--- a/docs/_data/sidebars/guides_sidebar.yml
+++ b/docs/_data/sidebars/guides_sidebar.yml
@@ -52,15 +52,15 @@ entries:
         output: web      
         subfolderitems:
 
-        - title: </br>Schema
+        - title:  Schema
           url: /personnel_file_connector_endpoint_schema.html
           output: web
           
-        - title: </br>Employees
+        - title:  Employees
           url: /personnel_file_connector_endpoint_employees.html
           output: web
 
-        - title: </br>Documents
+        - title:  Documents
           url: /personnel_file_connector_endpoint_documents.html
           output: web
 
