--- a/docs/_data/sidebars/guides_sidebar.yml
+++ b/docs/_data/sidebars/guides_sidebar.yml
@@ -31,7 +31,7 @@ entries:
       url: /guides_api_statuses.html
       output: web, pdf
 
-  - title: Personnel File Connector
+  - title: Personnel File API
     output: web
     folderitems:
 
