--- a/docs/_data/sidebars/guides_sidebar.yml
+++ b/docs/_data/sidebars/guides_sidebar.yml
@@ -59,6 +59,11 @@ entries:
         - title:  Schema
           url: /personnel_file_api_endpoint_schema.html
           output: web
+          subsubfolderitems:
+
+                  - title:  Employees
+                    url: /personnel_file_api_schema_employment.html
+                    output: web
           
         - title:  Employees
           url: /personnel_file_api_endpoint_employees.html
