--- a/docs/_data/sidebars/guides_sidebar.yml
+++ b/docs/_data/sidebars/guides_sidebar.yml
@@ -61,9 +61,25 @@ entries:
           output: web
           subsubfolderitems:
 
-                  - title:  Employees
-                    url: /personnel_file_api_schema_employment.html
-                    output: web
+          - title:  Categories
+            url: /personnel_file_api_schema_categories.html
+            output: web
+
+          - title:  Category
+            url: /personnel_file_api_schema_category.html
+            output: web
+            
+          - title:  Folders
+            url: /personnel_file_api_schema_folders.html
+            output: web
+            
+          - title:  Employee
+            url: /personnel_file_api_schema_employee.html
+            output: web
+
+          - title:  Document
+            url: /personnel_file_api_schema_document.html
+            output: web
           
         - title:  Employees
           url: /personnel_file_api_endpoint_employees.html
