--- a/docs/_data/sidebars/guides_sidebar.yml
+++ b/docs/_data/sidebars/guides_sidebar.yml
@@ -56,6 +56,7 @@ entries:
         output: web      
         subfolderitems:
 
+        subsubfolders:
         - title:  Schema
           url: /personnel_file_api_endpoint_schema.html
           output: web
