--- a/docs/_data/sidebars/guides_sidebar.yml
+++ b/docs/_data/sidebars/guides_sidebar.yml
@@ -56,6 +56,11 @@ entries:
         output: web      
         subfolderitems:
 
+      subsubfolders:
+      - title: Overview
+        output: web      
+        subsubfolderitems:
+
         - title:  Schema
           url: /personnel_file_api_endpoint_schema.html
           output: web
@@ -65,6 +70,23 @@ entries:
           output: web
 
         - title:  Documents 
+          url: /personnel_file_api_endpoint_documents.html
+          output: web
+
+      subsubfolders:
+      - title: Details
+        output: web      
+        subsubfolderitems:
+        
+        - title:  Schema-details
+          url: /personnel_file_api_endpoint_schema.html
+          output: web
+          
+        - title:  Employee-details
+          url: /personnel_file_api_endpoint_employees.html
+          output: web
+
+        - title:  Documentdetails
           url: /personnel_file_api_endpoint_documents.html
           output: web
     
